--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
 		}
 	</style>
 	<link href="css/print.css" rel="stylesheet" media="print">  
-    <script async src="js/perfmatters.js"></script>
   </head>
 
   <body>
@@ -131,6 +130,18 @@
       // Optional TODO: replace with your Google Analytics profile ID.
       ga('create', 'UA-XXXX-Y');
       ga('send', 'pageview');
+    </script>
+    <script>
+	  function logCRP() {
+	  var t = window.performance.timing,
+	    dcl = t.domContentLoadedEventStart - t.domLoading,
+	    complete = t.domComplete - t.domLoading;
+	  var stats = document.getElementById("crp-stats");
+	  stats.textContent = 'DCL: ' + dcl + 'ms, onload: ' + complete + 'ms';
+	  }
+	  window.addEventListener("load", function(event) {
+	  logCRP();
+	  });
     </script>
     <script async src="http://www.google-analytics.com/analytics.js"></script>
   </body>
